add sign-in and sign-up components with routing; update footer and header links

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="border-t border-gray-400 py-4">
-  <div class="container max-w-[1200px] mx-auto">Footer</div>
+  <div class="container max-w-[1200px] mx-auto">All rights reserved.</div>
 </footer>
