implement authentication features with sign-in and sign-up components; add auth guard and interceptor

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -47,6 +47,7 @@
             Contact
           </a>
         </li>
+        @if(!isAuthenticated) {
         <li>
           <a
             routerLink="/sign-in"
@@ -67,6 +68,11 @@
             Sign up
           </a>
         </li>
+        } @else {
+        <li>
+          <app-profile-dropdown></app-profile-dropdown>
+        </li>
+        }
       </ul>
     </nav>
   </div>
