--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center font-bold text-2xl mt-4 mb-8">Sign In</h1>
 
-<form class="flex flex-col gap-4 max-w-1/2 mx-auto">
+<form class="flex flex-col gap-4 max-w-1/2 mx-auto" (submit)="signIn()">
   <input
     class="w-full p-2 border border-gray-300 rounded-md"
     type="text"
