add Amity component and routing; update header with Amity link and add NotFound route

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,6 +8,14 @@
       <ul class="flex items-center">
         <li>
           <a
+            routerLink="/amity"
+            class="ml-5 inline-block hover:text-blue-400 transition"
+          >
+            Amity
+          </a>
+        </li>
+        <li>
+          <a
             routerLink="/about"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
